generify types